<?xml version="1.0"?>
<package format="2">
  <name>uwds_physics_clients</name>
  <version>0.0.0</version>
  <description>The uwds_physics_clients package</description>

  <maintainer email="yoan.sallami@laas.fr">Yoan Sallami</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LAAS-CNRS(2018)</license>

  <url type="repository">https://github.com/underworlds-robot</url>

  <author email="yoan.sallami@laas.fr">Yoan Sallami</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>uwds_msgs</depend>
  <depend>uwds</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>perception_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
